--- a/themes/obesity_theme/css/main.css
+++ b/themes/obesity_theme/css/main.css
@@ -2,10 +2,30 @@
 Custom CSS styles that override base theme go here.
 */
 
+.front .region-secondary-content .views-field-field-hero-image {
+  width:100%;
+}
+
+.front .region-secondary-content .hero-copy {
+  display:none;
+}
+
+
 .schedule-block .view-grouping-header {
 /*  border-bottom:1px solid #CCC; */
   text-align:center;
   color:#A51C30;
+}
+
+.schedule-block .view-grouping-header p {
+  color:#000;
+  font-size:13px;
+  font-weight:normal;
+  line-height:20px;
+}
+
+.views-field-title p strong {
+  font-size:16px;
 }
 
 .view-grouping-content caption {
@@ -53,4 +73,8 @@ ul.quicktabs-tabs.quicktabs-style-basic a:hover {
 
 ul.quicktabs-tabs.quicktabs-style-basic li.active a {
   color:#A51C30;
+}
+
+.schedule-block .views-field-field-dates-times-1 {
+ width:27%;
 }
