Case Presentation Form - adding styling changes
Microsite-wide changes led to the field titles bleeding into textarea / select dropdowns

--- a/themes/obesity_theme/css/main.css
+++ b/themes/obesity_theme/css/main.css
@@ -3,44 +3,43 @@ Custom CSS styles that override base theme go here.
 */
 
 .front .region-secondary-content .views-field-field-hero-image {
-  width:100%;
+  width: 100%;
 }
 
 .front .region-secondary-content .hero-copy {
-  display:none;
+  display: none;
 }
 
-
 .schedule-block .view-grouping-header {
-/*  border-bottom:1px solid #CCC; */
-  text-align:center;
-  color:#A51C30;
+  /*  border-bottom:1px solid #CCC; */
+  text-align: center;
+  color: #A51C30;
 }
 
 .schedule-block .view-grouping-header p {
-  color:#000;
-  font-size:13px;
-  font-weight:normal;
-  line-height:20px;
+  color: #000;
+  font-size: 13px;
+  font-weight: normal;
+  line-height: 20px;
 }
 
 .views-field-title p strong {
-  font-size:16px;
+  font-size: 16px;
 }
 
 .view-grouping-content caption {
   line-height: 29px;
-  color:#544e49;
+  color: #544e49;
   font-size: 18px;
-  font-weight:bold;
-  padding:10px 0 0;
-  margin-bottom:5px;
+  font-weight: bold;
+  padding: 10px 0 0;
+  margin-bottom: 5px;
 }
 
 #block-quicktabs-schedule h2.block-title,
 .tab-heading,
 .schedule-block h3 {
-  color:#A51C30;
+  color: #A51C30;
 }
 
 .tab-heading {
@@ -48,33 +47,44 @@ Custom CSS styles that override base theme go here.
   line-height: 28px;
   margin-bottom: 7px;
   margin-top: 2px;
-  font-weight:bold;
+  font-weight: bold;
 }
 
 .tab-heading .sub-header {
-  font-size:14px;
+  font-size: 14px;
 }
 
 ul.quicktabs-tabs.quicktabs-style-basic {
-  height:24px;
+  height: 24px;
 }
 
 ul.quicktabs-tabs.quicktabs-style-basic li {
-  padding:7px 10px;
+  padding: 7px 10px;
 }
 
 ul.quicktabs-tabs.quicktabs-style-basic a {
-  color:#555;
+  color: #555;
 }
 
 ul.quicktabs-tabs.quicktabs-style-basic a:hover {
-  color:#aaa;
+  color: #aaa;
 }
 
 ul.quicktabs-tabs.quicktabs-style-basic li.active a {
-  color:#A51C30;
+  color: #A51C30;
 }
 
 .schedule-block .views-field-field-dates-times-1 {
- width:27%;
+  width: 27%;
 }
+
+/* Case Presentation Form - overriding microsite-wide styling for webforms */
+.page-case .webform-client-form .form-item textarea.form-textarea {
+  height: 70px;
+}
+
+.page-case .webform-client-form .form-item label {
+  position: static;
+}
+
+/* End  Case Presentation Form changes */
