Case Presentation Form - hiding useless breadcrumb link

--- a/themes/obesity_theme/css/main.css
+++ b/themes/obesity_theme/css/main.css
@@ -87,4 +87,9 @@ ul.quicktabs-tabs.quicktabs-style-basic li.active a {
   position: static;
 }
 
+.page-node-1329 #breadcrumb {
+  visibility: hidden;
+  height: 0px;
+}
+
 /* End  Case Presentation Form changes */
